refactored completely to more closely match paper

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -4,9 +4,9 @@ logger.akka=DEBUG
 akka {
   loggers = ["akka.event.Logging$DefaultLogger"]
 
-  loglevel = "DEBUG"
+  loglevel = "ERROR"
 
-  stdout-loglevel = "DEBUG"
+  stdout-loglevel = "ERROR"
 
   actor.debug {
                    # enable function of Actor.loggable(), which is to log any received message
@@ -21,7 +21,7 @@ akka {
                    lifecycle = off
 
                    # enable DEBUG logging of all LoggingFSMs for events, transitions and timers
-                   fsm = on
+                   fsm = off
 
                    # enable DEBUG logging of subscription changes on the eventStream
                    event-stream = off
