some refactoring and adding persistence, wip

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -8,6 +8,10 @@ akka {
 
   stdout-loglevel = "ERROR"
 
+  persistence.journal.leveldb.dir = "target/journal"
+  persistence.snapshot-store.local.dir = "target/snapshot"
+  persistence.journal.leveldb.native = off
+
   actor.debug {
                    # enable function of Actor.loggable(), which is to log any received message
                    # at DEBUG level, see the “Testing Actor Systems” section of the Akka
